--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
 		<div id="container">
 			<div class="logo"></div>
 			<div class="navbar">
-			<input type="text" name="search" placeholder="Miasto wyjazdu">
-			<input type="text" name="search" placeholder="Miasto docelowe"> 
-			<input type="date" name="bday">
-			<input type="submit" name="szukaj">
-			<div class="footer"></div>
+				<select>
+  					<option value="Bydgoszcz">Bydgoszcz</option>
+  					<option value="Gdańsk">Gdańsk</option>
+  					<option value="Katowice">Katowice</option>
+  					<option value="Kraków">Kraków</option>
+  					<option value="Lublin">Lublin</option>
+  					<option value="Poznań">Poznań</option>
+  					<option value="Szczecin">Szczecin</option>
+  					<option value="Warszawa">Warszawa</option>
+  					<option value="Wrocław">Wrocław</option>
+  					<option value="Łódź">Łódź</option>
+				</select>	
+				<input type="text" name="search" placeholder="Miasto docelowe"> 
+				<input type="date" name="bday">
+				<input type="submit" name="szukaj">
 			</div>
-			
+			<div class="main">TEST</div>
+			<div class="footer"></div>
 
 		</div>
 	</body>
